# mkdocs-repo-docs

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: serve.sh
mkdocs_repo_docs/: __init__.py  live_reload.js  plugin.py
