[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-repo-docs"
dynamic = ["version"]
description = "MkDocs plugin to auto-discover and serve markdown files from anywhere in your repo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Tyler Christian"}
]
keywords = ["mkdocs", "plugin", "documentation", "auto-discover", "monorepo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "mkdocs>=1.4",
]

[project.urls]
Homepage = "https://github.com/killrazor/mkdocs-repo-docs"
Repository = "https://github.com/killrazor/mkdocs-repo-docs"
Issues = "https://github.com/killrazor/mkdocs-repo-docs/issues"

[project.entry-points."mkdocs.plugins"]
repo-docs = "mkdocs_repo_docs.plugin:RepoDocsPlugin"

[tool.setuptools.package-data]
mkdocs_repo_docs = ["*.js"]

[tool.setuptools_scm]
write_to = "mkdocs_repo_docs/_version.py"
